# video-hosting

./: .gitignore  .pre-commit-config.yaml  Makefile  appspec.yml  docker-compose.production.yaml  docker-compose.yaml  heroku.yml  readme.md
.github/: deploy_to_heroku.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
services/api/auth/: __init__.py  dependencies.py  exceptions.py  models.py  permissions.py  routers.py  schemas.py  utils.py
services/api/auth/schemas/: enums.py  schemas.py
services/api/auth/users/: routers.py
services/api/base/: database.py  exceptions.py  main.py  permissions.py  settings.py
services/api/base/database/: config.py  crud.py  dependencies.py  mixins.py
services/api/base/schemas/: enums.py
services/api/migrations/: env.py
services/api/migrations/versions/: 2022_08_30_1945-9f8418b5620e_.py  2022_09_03_1114-4f6148938b8b_.py  49b87efdc0c5_.py  e2f544bb510b_.py
services/api/templates/email/: account_deletion.html  base.html  confirmation.html  password_change.html  password_changed.html  verification.html
services/api/testing/: __init__.py  conftest.py
services/api/testing/auth/: conftest.py  factories.py  tests.py
services/api/tests/: conftest.py
services/api/tests/auth/: conftest.py  factories.py  test.py
services/auth/: Dockerfile  alembic.ini  buildspec.yml  migrationsscript.sh  pyproject.toml
services/auth/auth/: dependencies.py  models.py  permissions.py  routers.py  utils.py
services/auth/auth/database/: models.py
services/auth/auth/schemas/: enums.py
services/auth/auth/users/: routers.py
services/auth/base/: exceptions.py  main.py  settings.py
services/auth/base/database/: crud.py  mixins.py
services/auth/base/schemas/: enums.py  schemas.py
services/auth/grpc_module/: interceptors.py  main.py  service.py
services/auth/grpc_module/proto/: authorization_pb2.py
services/auth/migrations/: env.py
services/auth/migrations/versions/: 2022_09_25_1405-08196f522517_.py
services/auth/templates/email/: confirmation.html
services/auth/tests/: __init__.py  conftest.py
services/auth/tests/auth/: conftest.py  factories.py  test.py  test_auth.py
services/auth/tests/grpc_module/: conftest.py  test_grpc.py
services/content/: Dockerfile  buildspec.yml  pyproject.toml  pytest.ini
services/content/admin/: exceptions.py  permissions.py  routers.py
services/content/admin/content/: routers.py
services/content/admin/schemas/: enums.py  schemas.py
services/content/base/: exceptions.py  main.py  settings.py
services/content/base/database/: config.py
services/content/base/mixins/: schemas.py
services/content/base/schemas/: enums.py
services/content/base/utils/: consts.py  dependences.py  pagination.py
services/content/content/: routers.py  utils.py
services/content/content/content/: filters.py  routers.py
services/content/content/database/: mixins.py  models.py
services/content/grpc_module/: client.py  utils.py
services/content/migrations/: env.py
services/content/tests/: conftest.py  utils.py
services/content/users/: dependences.py  exceptions.py  routers.py
(+43 files in other folders)
