[tool.poetry]
name = "content"
version = "0.1.0"
description = ""
authors = ["pavelhardzei <pavelgordei11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
sqlalchemy = "^2.0.4"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
alembic-autogen-check = "^1.1.1"
grpcio = "^1.50.0"
grpcio-tools = "^1.50.0"
dark-utils = {git = "https://git@github.com/darkguin/dark-utils.git", tag = "0.01"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-factoryboy = "^2.5.0"
ipython = "^8.10.0"
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
